--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,10 +18,19 @@ dependencies:
   http: ^1.2.1
   go_router: ^16.0.0
   provider: ^6.1.1         # ✅ 추가된 부분
-  flutter_map: ^6.1.0
-  latlong2: ^0.9.0
+  # ✅ 지도 관련 패키지 추가
+  flutter_map: ^6.1.0 # 최신 안정 버전으로 확인 후 사용 권장
+  latlong2: ^0.9.0 # 최신 안정 버전으로 확인 후 사용 권장
   cached_network_image: ^3.3.1  # ✅ 최신 버전 또는 안정 버전 명시
   permission_handler: ^11.0.0
+  intl: ^0.18.1
+  table_calendar: ^3.0.9 # table_calendar 패키지가 올바르게 포함되어 있습니다.
+
+  cupertino_icons: ^1.0.8
+  # ✅ 챗봇 및 환경 변수 관련 패키지 추가
+  google_generative_ai: ^0.2.2 # Gemini API 사용을 위한 패키지 (최신 안정 버전 확인)
+  flutter_dotenv: ^5.1.0 # .env 파일 사용을 위한 패키지 (최신 안정 버전 확인)
+
   image_gallery_saver:
     path: packages/image_gallery_saver
   
@@ -29,7 +38,7 @@ dependencies:
   ultralytics_yolo:
     path: ../
 
-  cupertino_icons: ^1.0.8
+  
 
 dev_dependencies:
   integration_test:
@@ -42,6 +51,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - .env
     - assets/
     - assets/models/
     - assets/logo.png
